--- a/NetflixGPT/src/index.css
+++ b/NetflixGPT/src/index.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+/* global.css or your CSS file */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Edge */
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
